Fix width of pics on home page to not stretch on wider screens

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -12,7 +12,7 @@
         background-size: 110%;
         background-position: 50%;
         border-radius: 50%;
-        height: 64px;
+        max-width: 64px;
         width: 64px;
         float: left;
         margin-right: 8px;
@@ -54,14 +54,14 @@
           display: flex;
 
           .user-pic {
-            flex: 1 1 75px;
             background-image: image-url("andrew.jpg");
             background-repeat: no-repeat;
             background-size: 110%;
             background-position: 50%;
             border-radius: 50%;
             float: left;
-            width: 64px; height: 64px;
+            width: 64px;
+            height: 64px;
           }
 
           .activity-text {
@@ -75,12 +75,12 @@
           }
 
           .activity-photo {
-            flex: 1 1 75px;
             background-image: image-url("butcher.jpg");
             background-repeat: no-repeat;
             background-size: 100%;
             float: right;
-            width: 64px; height: 64px;
+            width: 64px;
+            height: 64px;
           }
         }
       } // ul
